# advent

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  advent  bench.rs
.cargo/: config.toml
.github/workflows/: codspeed.yml  rust.yml
benches/: 2024_01.rs  2024_03.rs
data-encrypted/2015/: day1.txt.age  day10.txt.age  day11.txt.age  day12.txt.age  day13.txt.age  day14.txt.age  day15.txt.age  day16.txt.age  day17.txt.age  day18.txt.age  day19.txt.age  day2.txt.age  day20.txt.age  day21.txt.age  day3.txt.age  day4.txt.age  day5.txt.age  day6.txt.age  day7.txt.age  day8.txt.age  day9.txt.age
data-encrypted/2016/: day1.txt.age
data-encrypted/2019/: day1.txt.age  day2.txt.age  day3.txt.age  day4.txt.age
data-encrypted/2020/: day1.txt.age  day2.txt.age  day3.txt.age  day4.txt.age
data-encrypted/2021/: day1.txt.age  day10.txt.age  day11.txt.age  day12.txt.age  day13.txt.age  day2.txt.age  day3.txt.age  day5.txt.age  day6.txt.age  day7.txt.age  day8.txt.age  day9.txt.age
data-encrypted/2022/: day1.txt.age  day2.txt.age  day3.txt.age
data-encrypted/2023/: day1.txt.age  day10.txt.age  day11.txt.age  day12.txt.age  day13.txt.age  day2.txt.age  day3.txt.age  day4.txt.age  day5.txt.age  day6.txt.age  day7.txt.age  day8.txt.age  day9.txt.age
data-encrypted/2024/: day1.txt.age  day10.txt.age  day11.txt.age  day12.txt.age  day13.txt.age  day2.txt.age  day3.txt.age  day4.txt.age  day5.txt.age  day6.txt.age  day7.txt.age  day8.txt.age  day9.txt.age
src/: day1.rs  day2.rs  day_template.rs  lib.rs  prelude.rs  util.rs
src/_2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  (+13 more)
(+65 files in other folders)
