[package]
name = "advent"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT"
authors = ["Grant Gurvis"]

[dependencies]
ahash = "0.8.11"
aho-corasick = "1.1.3"
indoc = "2.0.5"
itertools = "0.13.0"
num = "0.4.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["fs", "macros"] }
