[package]
name = "advent"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT"
authors = ["Grant Gurvis"]

[dependencies]
aho-corasick = "1.1.3"
indoc = "2.0.5"
itertools = "0.13.0"
num = "0.4.3"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12.9"
rustc-hash = "2.1.0"
tokio = { version = "1.41.1", features = ["fs", "macros"] }

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2.7.2" }

[[bench]]
name = "2024_01"
harness = false
path = "benches/2024_01.rs"

[[bench]]
name = "2024_02"
harness = false
path = "benches/2024_02.rs"

[[bench]]
name = "2024_03"
harness = false
path = "benches/2024_03.rs"

