[package]
name = "advent"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT"
authors = ["Grant Gurvis"]

[dependencies]
aho-corasick = "1.1.3"
indoc = "2.0.5"
itertools = "0.13.0"
md-5 = "0.10.6"
num = "0.4.3"
petgraph = "0.6.5"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12.9"
rustc-hash = "2.1.0"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["fs", "macros"] }

[profile.test]
opt-level = 1

[profile.test.package."*"]
opt-level = 3
